--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react": "^19.2.4"
+    "vite-plugin-html": "^3.2.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
