--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "vite-plugin-html": "^3.2.2"
